최근 클릭된 공고를 클릭 횟수에 따라 정렬하는 기능 구현 (#17)
* refactor: 클릭 정렬 로직 개선 및 코드 구조 정리

* refactor: Mock 정렬 방식 최신화

* feat: JobPosting API 정렬 방식 업데이트

* test: 클릭 정렬 로직 변경에 따른 테스트 코드 수정

* style: Job 카드 레이아웃 정렬 방식 개선

* refactor: increase() 메서드 동시성 문제 해결

* Refactor: 정렬 로직 개선

* Refactor: JobPostingInfoService 클래스. 정렬 로직 개선

* Refactor: 클릭 카운트 맵 ConcurrentHashMap 수정

* Refactor: private 메서드 제거

* refactor: 동시성 문제 해결

* test: 동시성 테스트 및 초기화 기능 추가

* docs: 주석 제거

* docs: 주석 제거

---------

Co-authored-by: kim minseok <kimminseok@kims-MacBook-Pro.local>